# CChessEngine

./: .gitignore  .pre-commit-config.yaml  .pre-commit.config.yaml  CMakeLists.txt  LICENSE  Makefile  README.md  attack.c  bitboard.c  board.c  cchess_engine  cchess_engine.c  data.c  definitions.h  evaluate.c  functions.h  globals.h  hashkey.c  init.c  init.h  io.c  macros.h  makemove.c  misc.c  movegen.c  perft.c  pvtable.c  search.c  validate.c
include/: definitions.h  globals.h  init.h  macros.h  polykeys.h  tinycthread.h
src/: attack.c  bitboard.c  board.c  cchess_engine.c  data.c  evaluate.c  hashkey.c  init.c  io.c  makemove.c  misc.c  movegen.c  perft.c  polybook.c  polykeys.c  pvtable.c  search.c  uci.c  validate.c  xboard.c
